# spec/api-spec.yaml
@@ -80,6 +80,34 @@ paths:
         'default':
           $ref: '#/components/responses/ServerError'
 
+  /api/v1/auth/verify-user:
+    post:
+      summary: 'Endpoint to check if a user has registered'
+      operationId: verifyUser
+      x-visibility: public
+      tags:
+        - 'user'
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VerifyUser'
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VerifyUserResponse'
+        '400':
+          $ref: '#/components/responses/InvalidRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        'default':
+          $ref: '#/components/responses/ServerError'
+
 components:
   schemas:
     # REQUEST OBJECT DEFINITIONS
@@ -131,6 +159,15 @@ components:
           type: string
           description: id  token
 
+    VerifyUser:
+      type: object
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          description: The email of the User attempting to verify if it exists
+
     SuccessMessage:
       type: object
       properties:
@@ -170,6 +207,13 @@ components:
           type: string
           format: jwt
           description: authorizes a valid user
+
+    VerifyUserResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          description: USER_AVAILABLE or USER_NOT_AVAILABLE
 
     User:
       type: 'object'
