# src/routes/v1/auth.route.ts
@@ -4,7 +4,8 @@ import { container } from 'tsyringe';
 import { AuthController } from '../../controller/auth.controller';
 
 
-const authController: any = container.resolve(AuthController);
-router.post('/login', authController.loginUser);
+const authController: AuthController = container.resolve(AuthController);
+router.post('/login', authController.loginUser)
+.get('/verify-user', authController.verifyUser);
 
 export default router;
